# Papier

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/paper-grain/: Cargo.toml
crates/paper-grain/src/: lib.rs
crates/papier-app/: Cargo.toml  MANUAL-VERIFICATION.md
crates/papier-app/src/: app.rs  exclusion.rs  grain.rs  loginitem.rs  main.rs  menubar.rs  overlay.rs  power.rs  settings.rs
docs/research/: feature-map.md  legibility-tuning.md  screen-legibility-papers.md  textures.md
docs/superpowers/specs/: 2026-06-26-paperman-clone-and-ghostty-theme-design.md
ghostty-themes/: README.md  install-ghostty.sh  papier-forest  papier-forest-textured  papier-lamplight  papier-lamplight-textured  papier-paper  papier-paper-textured
scripts/: build-app.sh  make-dmg.sh
tools/gen-ghostty-textures/: Cargo.toml
tools/gen-ghostty-textures/src/: main.rs
tools/gen-icon/: Cargo.toml
tools/gen-icon/src/: main.rs
